--- a/collaborative_filtering.html
+++ b/collaborative_filtering.html
@@ -174,6 +174,19 @@ div#notebook {
 
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="s">&#39;This is a lab in the Introduction to Big Data and Spark Course at Berkeley.&#39;</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
 <div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
@@ -1334,7 +1347,7 @@ The RMSE on the average set is 1.12036693569
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">This</span> <span class="n">work</span> <span class="n">was</span> <span class="n">based</span> <span class="n">on</span> <span class="n">a</span> <span class="n">lab</span> <span class="ow">in</span> <span class="n">the</span> <span class="n">Introduction</span> <span class="n">to</span> <span class="n">Big</span> <span class="n">Data</span> <span class="n">Spark</span> <span class="n">Course</span> <span class="n">at</span> <span class="n">Berkeley</span><span class="o">.</span>
+<div class=" highlight hl-ipython2"><pre><span class="s">&#39;This is a lab in the Introduction to Big Data and Spark Course at Berkeley.&#39;</span>
 </pre></div>
 
 </div>
